2012-10-04  Nick Clifton  <nickc@redhat.com>

	* gas/v850/v850e1.d: Fix expected disassembly of clr1, not1, set1
	and tst1 insns.

2012-10-04  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gas/s390/zarch-zEC12.d: Fix branch preload instructions.
	* gas/s390/zarch-zEC12.s: Likewise.

2012-10-04  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gas/s390/s390.exp: Run zEC12 tests.
	* gas/s390/zarch-zEC12.d: New file.
	* gas/s390/zarch-zEC12.s: New file.

2012-09-25  Saravanan Ekanathan <saravanan.ekanathan@amd.com>

	* gas/i386/arch-10-bdver1.d: New file to test bdver1 core.
	* gas/i386/x86-64-arch-2-bdver1.d: Likewise.
	* gas/i386/i386.exp: Run bdver1 testcases.
	* gas/i386/arch-10-bdver2.d: Updated -march flags.
	* gas/i386/arch-10-btver1.d: Likewise.
	* gas/i386/arch-10-btver2.d: Likewise.
	* gas/i386/x86-64-arch-2-bdver2.d: Likewise.
	* gas/i386/x86-64-arch-2-btver1.d: Likewise.
	* gas/i386/x86-64-arch-2-btver2.d: Likewise.

2012-09-23  Maciej W. Rozycki  <macro@codesourcery.com>

	* gas/mips/hilo-diff-eb.d: New test.
	* gas/mips/hilo-diff-eb-n32.d: New test.
	* gas/mips/hilo-diff-eb-n64.d: New test.
	* gas/mips/hilo-diff-el.d: New test.
	* gas/mips/hilo-diff-el-n32.d: New test.
	* gas/mips/hilo-diff-el-n64.d: New test.
	* gas/mips/mips16@hilo-diff-eb.d: New test.
	* gas/mips/mips16@hilo-diff-eb-n32.d: New test.
	* gas/mips/mips16@hilo-diff-eb-n64.d: New test.
	* gas/mips/mips16@hilo-diff-el.d: New test.
	* gas/mips/mips16@hilo-diff-el-n32.d: New test.
	* gas/mips/mips16@hilo-diff-el-n64.d: New test.
	* gas/mips/micromips@hilo-diff-eb.d: New test.
	* gas/mips/micromips@hilo-diff-eb-n32.d: New test.
	* gas/mips/micromips@hilo-diff-eb-n64.d: New test.
	* gas/mips/micromips@hilo-diff-el.d: New test.
	* gas/mips/micromips@hilo-diff-el-n32.d: New test.
	* gas/mips/micromips@hilo-diff-el-n64.d: New test.
	* gas/mips/hilo-diff.s: New test source.
	* gas/mips/mips.exp: Run the new tests.

2012-09-23  Richard Sandiford  <rdsandiford@googlemail.com>
