@@ -8,3 +8,194 @@ start:
 	dstt	8,7,0
 	dstst	5,6,3
 	dststt	4,5,2
+	lvebx    30,22,24
+	lvebx    21,0,24
+	lvehx    10,16,2
+	lvehx    20,0,23
+	lvewx    17,4,18
+	lvewx    23,0,8
+	lvsl     6,0,25
+	lvsl     2,0,6
+	lvsr     22,16,12
+	lvsr     0,0,29
+	lvxl     15,5,13
+	lvxl     19,0,23
+	lvx      22,1,2
+	lvx      18,0,17
+	mfvrsave 31
+	mfvscr   24
+	mtvrsave 10
+	mtvscr   25
+	stvebx   18,27,10
+	stvebx   16,0,6
+	stvehx   17,13,16
+	stvehx   23,0,20
+	stvewx   11,19,31
+	stvewx   31,0,1
+	stvxl    26,21,17
+	stvxl    13,0,22
+	stvx     11,31,31
+	stvx     30,0,16
+	vaddcuw  24,7,28
+	vaddfp   3,30,11
+	vaddsbs  8,28,9
+	vaddshs  7,5,4
+	vaddsws  22,26,27
+	vaddubm  16,14,28
+	vaddubs  6,1,25
+	vadduhm  2,4,6
+	vadduhs  26,21,8
+	vadduwm  29,31,1
+	vadduws  23,13,4
+	vandc    30,16,9
+	vand     3,13,27
+	vavgsb   4,6,17
+	vavgsh   23,28,19
+	vavgsw   8,15,31
+	vavgub   6,7,25
+	vavguh   25,22,10
+	vavguw   3,23,29
+	vcfpsxsw 14,2,6
+	vcfpuxws 9,31,20
+	vcfsx    24,30,3
+	vcfux    17,21,29
+	vcmpbfp  18,28,0
+	vcmpbfp. 19,26,3
+	vcmpeqfp 16,2,11
+	vcmpeqfp. 23,13,13
+	vcmpequb 25,19,10
+	vcmpequb. 18,11,2
+	vcmpequh 9,25,7
+	vcmpequh. 14,24,21
+	vcmpequw 24,12,5
+	vcmpequw. 19,16,1
+	vcmpgefp 23,17,16
+	vcmpgefp. 19,29,17
+	vcmpgtfp 16,28,13
+	vcmpgtfp. 14,24,7
+	vcmpgtsb 16,22,6
+	vcmpgtsb. 2,12,14
+	vcmpgtsh 28,3,29
+	vcmpgtsh. 16,19,13
+	vcmpgtsw 15,0,5
+	vcmpgtsw. 21,13,0
+	vcmpgtub 5,10,30
+	vcmpgtub. 7,13,10
+	vcmpgtuh 24,15,16
+	vcmpgtuh. 25,21,27
+	vcmpgtuw 17,27,6
+	vcmpgtuw. 8,21,27
+	vcsxwfp  1,1,14
+	vctsxs   4,15,25
+	vctuxs   28,23,14
+	vcuxwfp  6,6,0
+	vexptefp 0,8
+	vlogefp  22,27
+	vmaddfp  23,18,5,18
+	vmaxfp   13,13,27
+	vmaxsb   8,23,14
+	vmaxsh   19,17,0
+	vmaxsw   19,3,22
+	vmaxub   23,30,28
+	vmaxuh   9,20,23
+	vmaxuw   21,19,1
+	vmhaddshs 22,13,5,22
+	vmhraddshs 31,0,3,18
+	vminfp   2,21,24
+	vminsb   20,6,10
+	vminsh   18,27,26
+	vminsw   3,4,1
+	vminub   7,0,13
+	vminuh   0,12,6
+	vminuw   6,3,1
+	vmladduhm 3,29,3,26
+	vmrghb   21,5,31
+	vmrghh   21,24,0
+	vmrghw   16,0,22
+	vmrglb   1,17,16
+	vmrglh   14,8,15
+	vmrglw   31,21,5
+	vmr      24,9,
+	vor      24,9,9
+	vmsummbm 0,24,15,23
+	vmsumshm 1,4,7,25
+	vmsumshs 9,8,13,31
+	vmsumubm 23,31,12,30
+	vmsumuhm 29,0,26,21
+	vmsumuhs 27,14,25,5
+	vmulesb  10,25,14
+	vmulesh  1,18,8
+	vmuleub  17,14,9
+	vmuleuh  5,26,9
+	vmulosb  21,18,6
+	vmulosh  4,5,8
+	vmuloub  2,9,19
+	vmulouh  29,5,4
+	vnmsubfp 8,2,6,5
+	vnor     31,9,10
+	vnor     25,31,31
+	vnot     25,31,
+	vor      23,7,2
+	vperm    0,28,22,25
+	vpkpx    16,25,17
+	vpkshss  12,16,17
+	vpkshus  1,19,23
+	vpkswss  25,7,13
+	vpkswus  4,24,10
+	vpkuhum  9,27,12
+	vpkuhus  22,10,25
+	vpkuwum  30,18,0
+	vpkuwus  7,3,22
+	vrefp    24,28
+	vrfim    17,19
+	vrfin    24,25
+	vrfip    3,5
+	vrfiz    8,10
+	vrlb     26,18,30
+	vrlh     16,17,25
+	vrlw     23,30,9
+	vrsqrtefp 2,18
+	vsel     20,14,18,10
+	vslb     25,25,12
+	vsldoi   9,9,12,7
+	vslh     14,2,11
+	vslo     30,5,6
+	vsl      22,30,9
+	vslw     26,26,3
+	vspltb   1,20,6
+	vsplth   16,18,3
+	vspltisb 25,-13
+	vspltish 22,10
+	vspltisw 13,13
+	vspltw   9,18,2
+	vsrab    14,22,0
+	vsrah    12,12,18
+	vsraw    2,2,13
+	vsrb     7,27,5
+	vsrh     7,11,29
+	vsro     18,30,31
+	vsr      2,9,28
+	vsrw     0,25,0
+	vsubcuw  24,2,10
+	vsubfp   22,24,20
+	vsubsbs  10,22,13
+	vsubshs  24,17,28
+	vsubsws  10,26,0
+	vsububm  16,11,24
+	vsububs  11,21,1
+	vsubuhm  6,12,24
+	vsubuhs  30,11,9
+	vsubuwm  19,20,13
+	vsubuws  18,25,6
+	vsum2sws 25,10,18
+	vsum4sbs 13,16,21
+	vsum4shs 23,8,4
+	vsum4ubs 28,13,30
+	vsumsws  22,10,8
+	vupkhpx  24,14
+	vupkhsb  2,22
+	vupkhsh  16,2
+	vupklpx  10,26
+	vupklsb  15,28
+	vupklsh  8,8
+	vxor     25,0,3
