@@ -1,0 +1,52 @@
+start:
+	lvepxl   3,0,28
+	lvepxl   19,4,18
+	lvepx    27,0,19
+	lvepx    1,25,18
+	lvexbx   31,0,27
+	lvexbx   28,1,12
+	lvexhx   31,0,14
+	lvexhx   17,16,31
+	lvexwx   22,0,29
+	lvexwx   23,25,5
+	lvsm     3,0,12
+	lvsm     27,29,1
+	lvswxl   7,0,6
+	lvswxl   7,16,8
+	lvswx    14,0,18
+	lvswx    28,28,16
+	lvtlxl   27,0,12
+	lvtlxl   27,28,0
+	lvtlx    23,0,25
+	lvtlx    1,25,14
+	lvtrxl   20,0,24
+	lvtrxl   22,29,24
+	lvtrx    24,0,8
+	lvtrx    13,23,28
+	mvidsplt 12,28,12
+	mviwsplt 10,27,0
+	stvepxl  27,0,13
+	stvepxl  2,2,31
+	stvepx   3,0,10
+	stvepx   27,28,0
+	stvexbx  13,0,6
+	stvexbx  13,25,3
+	stvexhx  22,0,1
+	stvexhx  17,14,10
+	stvexwx  21,0,27
+	stvexwx  31,18,1
+	stvflxl  26,0,13
+	stvflxl  22,13,21
+	stvflx   5,0,9
+	stvflx   21,24,1
+	stvfrxl  13,0,10
+	stvfrxl  13,17,25
+	stvfrx   17,0,10
+	stvfrx   8,12,31
+	stvswxl  18,0,29
+	stvswxl  26,14,8
+	stvswx   0,0,15
+	stvswx   13,23,7
+	vabsdub  6,17,16
+	vabsduh  21,18,4
+	vabsduw  25,20,9
