@@ -108,3 +108,7 @@ power7:
 	or	  29,29,29
 	mdoom
 	or	  30,30,30
+	mfppr	  10
+	mfppr32	  11
+	mtppr	  12
+	mtppr32	  13
