@@ -36,6 +36,7 @@ if { [istarget powerpc*-*-*] } then {
 	run_dump_test "altivec_xcoff64"
     } else {
 	run_dump_test "altivec"
+	run_dump_test "altivec2"
 	run_dump_test "altivec_and_spe"
 	run_dump_test "booke"
 	run_dump_test "e500"
